--- a/SAD_Project/Layouts/DefaultLayout.xml
+++ b/SAD_Project/Layouts/DefaultLayout.xml
@@ -7,7 +7,9 @@
 					<UIElement xsi:type="SplitContainer" AutoHideSize="1198,395" DockedSize="1103.43847754905,599" DocumentSize="1087,705" FloatingSize="1198,395" Size="1103.43847754905,599" Orientation="Vertical">
 						<UIElement xsi:type="Workspace" AutoHideSize="1198,395" DockedSize="1198,395" DocumentSize="1103.43847754905,599" FloatingSize="1198,395" Size="1103.43847754905,599">
 							<Content xsi:type="TabbedMdiHost">
-								<Content xsi:type="TabbedMdiContainer" AutoHideSize="1103.43847754905,599" DockedSize="1103.43847754905,599" DocumentSize="1103.43847754905,599" FloatingSize="1103.43847754905,599" Size="1103.43847754905,599" SelectedWindowUniqueId="fbf2de81-b1d5-4a6d-8b31-197cc1a0f617" />
+								<Content xsi:type="SplitContainer" AutoHideSize="1103.43847754905,599" DockedSize="1103.43847754905,599" DocumentSize="1103.43847754905,599" FloatingSize="1103.43847754905,599" Size="1103.43847754905,599" Orientation="Horizontal">
+									<UIElement xsi:type="TabbedMdiContainer" AutoHideSize="1103.43847754905,599" DockedSize="1103.43847754905,599" DocumentSize="1103.43847754905,599" FloatingSize="1103.43847754905,599" Size="1103.43847754905,599" SelectedWindowUniqueId="f6152acf-b4ad-4e8d-818b-5f681086d88a" />
+								</Content>
 							</Content>
 						</UIElement>
 						<UIElement xsi:type="ToolWindowContainer" AutoHideSize="200,200" DockedSize="1103.43847754905,258" DocumentSize="200,200" FloatingSize="200,200" Size="1103.43847754905,258">
@@ -110,15 +112,15 @@
 				</UIElement>
 			</UIElement>
 			<UIElement xsi:type="SplitContainer" AutoHideSize="200,200" DockedSize="617.731125635527,862" DocumentSize="200,200" FloatingSize="200,200" Size="617.731125635527,862" Orientation="Vertical">
-				<UIElement xsi:type="ToolWindowContainer" AutoHideSize="200,200" DockedSize="617.731125635527,383.655383436182" DocumentSize="200,200" FloatingSize="200,200" Size="617.731125635527,383.655383436182" SelectedWindowUniqueId="06d03f51-3499-4aaf-8fcf-f5474d1ce325">
+				<UIElement xsi:type="ToolWindowContainer" AutoHideSize="200,200" DockedSize="617.731125635527,383.655383436182" DocumentSize="200,200" FloatingSize="200,200" Size="617.731125635527,383.655383436182" SelectedWindowUniqueId="3dee95ba-ff20-4757-9457-68b527aaa48d">
 					<UIElement xsi:type="ToolWindowRef" UniqueId="3dee95ba-ff20-4757-9457-68b527aaa48d" />
 					<UIElement xsi:type="ToolWindowRef" UniqueId="06d03f51-3499-4aaf-8fcf-f5474d1ce325" />
 					<UIElement xsi:type="ToolWindowRef" UniqueId="1a5ef5f6-b295-4443-9b5d-5e50bcc004f8" />
 				</UIElement>
-				<UIElement xsi:type="ToolWindowContainer" AutoHideSize="552,200" DockedSize="617.731125635527,375.72189293231" DocumentSize="552,200" FloatingSize="552,200" Size="617.731125635527,375.72189293231" SelectedWindowUniqueId="4f56d732-bbfa-445f-b874-8c7228be4cd8">
+				<UIElement xsi:type="ToolWindowContainer" AutoHideSize="552,200" DockedSize="617.731125635527,357.72189293231" DocumentSize="552,200" FloatingSize="552,200" Size="617.731125635527,357.72189293231" SelectedWindowUniqueId="4f56d732-bbfa-445f-b874-8c7228be4cd8">
 					<UIElement xsi:type="ToolWindowRef" UniqueId="4f56d732-bbfa-445f-b874-8c7228be4cd8" />
 				</UIElement>
-				<UIElement xsi:type="ToolWindowContainer" AutoHideSize="200,200" DockedSize="617.731125635527,92.6227236315083" DocumentSize="200,200" FloatingSize="200,200" Size="617.731125635527,92.6227236315083" SelectedWindowUniqueId="2661df08-4ec6-499e-a829-b924c1758b5c">
+				<UIElement xsi:type="ToolWindowContainer" AutoHideSize="200,200" DockedSize="617.731125635527,110.622723631508" DocumentSize="200,200" FloatingSize="200,200" Size="617.731125635527,110.622723631508" SelectedWindowUniqueId="2661df08-4ec6-499e-a829-b924c1758b5c">
 					<UIElement xsi:type="ToolWindowRef" UniqueId="2661df08-4ec6-499e-a829-b924c1758b5c" />
 				</UIElement>
 			</UIElement>
@@ -346,8 +348,8 @@
 		<ToolWindow UniqueId="3dee95ba-ff20-4757-9457-68b527aaa48d" AutoHideSize="200,200" DockedSize="311,383.655383436182" DocumentSize="200,200" FloatingSize="200,200" Size="311,383.655383436182" IsOpen="true" LastState="Docked" Name="CellExplorer" StandardMdiBounds="0,0,300,200" State="Docked" />
 		<ToolWindow UniqueId="25838486-425f-49d2-91b1-32803c688129" AutoHideSize="200,200" DockedSize="200,200" DocumentSize="200,200" FloatingSize="200,200" Size="200,200" IsOpen="false" LastState="Docked" Name="FindAndReplace" RaftingLocation="845,338" StandardMdiBounds="0,0,300,200" State="Floating" />
 		<ToolWindow UniqueId="4478f260-d6ed-45ea-8321-f075dae88982" AutoHideSize="550,200" DockedSize="1403,300" DocumentSize="550,200" FloatingSize="550,200" Size="1403,300" IsOpen="false" LastState="Docked" Name="FindResults" StandardMdiBounds="0,0,300,200" State="Docked" />
-		<ToolWindow UniqueId="2661df08-4ec6-499e-a829-b924c1758b5c" AutoHideSize="200,200" DockedSize="311,92.6227236315083" DocumentSize="200,200" FloatingSize="200,200" Size="311,92.6227236315083" IsOpen="true" LastState="Floating" Name="Properties" RaftingLocation="1342,770" StandardMdiBounds="0,0,300,200" State="Docked" />
-		<ToolWindow UniqueId="4f56d732-bbfa-445f-b874-8c7228be4cd8" AutoHideSize="200,200" DockedSize="200,375.72189293231" DocumentSize="200,200" FloatingSize="200,200" Size="200,375.72189293231" IsOpen="true" LastState="Docked" Name="_DN_dbdcc4a245c3a11dda50fded38586206" StandardMdiBounds="0,0,300,200" State="Docked">
+		<ToolWindow UniqueId="2661df08-4ec6-499e-a829-b924c1758b5c" AutoHideSize="200,200" DockedSize="311,110.622723631508" DocumentSize="200,200" FloatingSize="200,200" Size="311,110.622723631508" IsOpen="true" LastState="Floating" Name="Properties" RaftingLocation="1342,770" StandardMdiBounds="0,0,300,200" State="Docked" />
+		<ToolWindow UniqueId="4f56d732-bbfa-445f-b874-8c7228be4cd8" AutoHideSize="200,200" DockedSize="200,357.72189293231" DocumentSize="200,200" FloatingSize="200,200" Size="200,357.72189293231" IsOpen="true" LastState="Docked" Name="_DN_dbdcc4a245c3a11dda50fded38586206" StandardMdiBounds="0,0,300,200" State="Docked">
 			<Tag xsi:type="xsd:string">SRS.Emulator.Views.EmulatorView?Controller=Controller</Tag>
 		</ToolWindow>
 		<ToolWindow UniqueId="68d41be2-89b3-4dce-96e1-e2138c476c3f" AutoHideSize="200,200" DockedSize="178.830396815427,200" DocumentSize="200,200" FloatingSize="200,200" Size="178.830396815427,200" IsOpen="true" LastState="Docked" Name="_DN_f58aa779e579e5eb70e74d8e521a850d" StandardMdiBounds="0,0,300,200" State="Docked">
